force-app/main/default/objects/Activity/fields/Amenzas__c.field-meta.xml
<CustomField>
    <fullName>Amenzas__c</fullName>
    <label>Amenzas</label>
    <type>TextArea</type>
</CustomField>