force-app/main/default/objects/Activity/fields/Compromisos_cliente__c.field-meta.xml
<CustomField>
    <fullName>Compromisos_cliente__c</fullName>
    <label>¿Qué aprendí de mi cliente/prospecto?</label>
    <type>TextArea</type>
</CustomField>