force-app/main/default/objects/Activity/fields/Debilidades__c.field-meta.xml
<CustomField>
    <fullName>Debilidades__c</fullName>
    <label>Debilidades</label>
    <type>TextArea</type>
</CustomField>