force-app/main/default/objects/Activity/fields/Facturaci_n_Acordada__c.field-meta.xml
<CustomField>
    <fullName>Facturaci_n_Acordada__c</fullName>
    <label>Facturación Acordada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>