force-app/main/default/objects/Activity/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <label>.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>¿Qué?</fullName>
            </value>
            <value>
                <fullName>¿Cómo?</fullName>
            </value>
            <value>
                <fullName>¿Cuándo?</fullName>
            </value>
            <value>
                <fullName>¿Quién?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>