force-app/main/default/objects/Activity/fields/Fortalezas__c.field-meta.xml
<CustomField>
    <fullName>Fortalezas__c</fullName>
    <label>Fortalezas</label>
    <type>TextArea</type>
</CustomField>