force-app/main/default/objects/Activity/fields/IMP_Calle__c.field-meta.xml
<CustomField>
    <fullName>IMP_Calle__c</fullName>
    <description>Calle para check-in</description>
    <label>Calle y Número</label>
    <length>255</length>
    <type>Text</type>
</CustomField>