force-app/main/default/objects/Activity/fields/IMP_Check_In__c.field-meta.xml
<CustomField>
    <fullName>IMP_Check_In__c</fullName>
    <formula>Geolocation__Latitude__s &lt;&gt; 0 &amp;&amp; Geolocation__Longitude__s &lt;&gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check In</label>
    <type>Checkbox</type>
</CustomField>