force-app/main/default/objects/Activity/fields/IMP_Check_Out__c.field-meta.xml
<CustomField>
    <fullName>IMP_Check_Out__c</fullName>
    <formula>IMP_Geo_Latitude_CheckOut__c &lt;&gt; 0 &amp;&amp; IMP_Geo_Longitude_CheckOut__c &lt;&gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Out</label>
    <type>Checkbox</type>
</CustomField>