force-app/main/default/objects/Activity/fields/IMP_Ciudad__c.field-meta.xml
<CustomField>
    <fullName>IMP_Ciudad__c</fullName>
    <description>Ciudad que indica el check-in</description>
    <label>Alcaldía o Municipio</label>
    <length>40</length>
    <type>Text</type>
</CustomField>