force-app/main/default/objects/Activity/fields/IMP_CodigoPostal__c.field-meta.xml
<CustomField>
    <fullName>IMP_CodigoPostal__c</fullName>
    <description>Código para realizar check-in</description>
    <label>Código postal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>