force-app/main/default/objects/Activity/fields/IMP_Estado__c.field-meta.xml
<CustomField>
    <fullName>IMP_Estado__c</fullName>
    <label>Estado o provincia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGUASCALIENTES</fullName>
            </value>
            <value>
                <fullName>BAJA CALIFORNIA</fullName>
            </value>
            <value>
                <fullName>BAJA CALIFORNIA S</fullName>
            </value>
            <value>
                <fullName>CHIHUAHUA</fullName>
            </value>
            <value>
                <fullName>CHIAPAS</fullName>
            </value>
            <value>
                <fullName>CAMPECHE</fullName>
            </value>
            <value>
                <fullName>CIUDAD DE MÉXICO</fullName>
            </value>
            <value>
                <fullName>COAHUILA</fullName>
            </value>
            <value>
                <fullName>COLIMA</fullName>
            </value>
            <value>
                <fullName>DURANGO</fullName>
            </value>
            <value>
                <fullName>GUERRERO</fullName>
            </value>
            <value>
                <fullName>GUANAJUATO</fullName>
            </value>
            <value>
                <fullName>HIDALGO</fullName>
            </value>
            <value>
                <fullName>JALISCO</fullName>
            </value>
            <value>
                <fullName>MICHOACÁN</fullName>
            </value>
            <value>
                <fullName>ESTADO DE MÉXICO</fullName>
            </value>
            <value>
                <fullName>MORELOS</fullName>
            </value>
            <value>
                <fullName>NAYARIT</fullName>
            </value>
            <value>
                <fullName>NUEVO LEÓN</fullName>
            </value>
            <value>
                <fullName>OAXACA</fullName>
            </value>
            <value>
                <fullName>PUEBLA</fullName>
            </value>
            <value>
                <fullName>QUINTANA ROO</fullName>
            </value>
            <value>
                <fullName>QUERÉTARO</fullName>
            </value>
            <value>
                <fullName>SINALOA</fullName>
            </value>
            <value>
                <fullName>SAN LUIS POTOSÍ</fullName>
            </value>
            <value>
                <fullName>SONORA</fullName>
            </value>
            <value>
                <fullName>TABASCO</fullName>
            </value>
            <value>
                <fullName>TLAXCALA</fullName>
            </value>
            <value>
                <fullName>TAMAULIPAS</fullName>
            </value>
            <value>
                <fullName>VERACRUZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>