force-app/main/default/objects/Activity/fields/IMP_Geo_Latitude_CheckOut__c.field-meta.xml
<CustomField>
    <fullName>IMP_Geo_Latitude_CheckOut__c</fullName>
    <description>Geocode para latitude check-out</description>
    <label>Geolocation (Latitud Check-out)</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>