force-app/main/default/objects/Activity/fields/IMP_Geo_Longitude_CheckOut__c.field-meta.xml
<CustomField>
    <fullName>IMP_Geo_Longitude_CheckOut__c</fullName>
    <label>Geolocation (Longitude Check-out)</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>