force-app/main/default/objects/Activity/fields/IMP_Pais__c.field-meta.xml
<CustomField>
    <fullName>IMP_Pais__c</fullName>
    <description>Este campo sirve para identificar el país de check-in</description>
    <label>País</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MÉXICO</fullName>
            </value>
            <value>
                <fullName>COLOMBIA</fullName>
            </value>
            <value>
                <fullName>COSTA RICA</fullName>
            </value>
            <value>
                <fullName>ESTADOS UNIDOS</fullName>
            </value>
            <value>
                <fullName>GUATEMALA</fullName>
            </value>
            <value>
                <fullName>EL SALVADOR</fullName>
            </value>
            <value>
                <fullName>REP. DOMINICANA</fullName>
            </value>
            <value>
                <fullName>NICARAGUA</fullName>
            </value>
            <value>
                <fullName>HONDURAS</fullName>
            </value>
            <value>
                <fullName>PUERTO RICO</fullName>
            </value>
            <value>
                <fullName>ESPAÑA</fullName>
            </value>
            <value>
                <fullName>BRASIL</fullName>
            </value>
            <value>
                <fullName>CANADÁ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>