force-app/main/default/objects/Activity/fields/M_ximo_Esperado__c.field-meta.xml
<CustomField>
    <fullName>M_ximo_Esperado__c</fullName>
    <label>Máximo Esperado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>