force-app/main/default/objects/Activity/fields/Minimo_Esperado__c.field-meta.xml
<CustomField>
    <fullName>Minimo_Esperado__c</fullName>
    <label>Minimo Esperado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>