force-app/main/default/objects/Activity/fields/Minuta_de_visita_anterior__c.field-meta.xml
<CustomField>
    <fullName>Minuta_de_visita_anterior__c</fullName>
    <label>Minuta de visita anterior</label>
    <type>TextArea</type>
</CustomField>