force-app/main/default/objects/Activity/fields/Oportunidades__c.field-meta.xml
<CustomField>
    <fullName>Oportunidades__c</fullName>
    <label>Oportunidades</label>
    <type>TextArea</type>
</CustomField>