force-app/main/default/objects/Activity/fields/Plan_B__c.field-meta.xml
<CustomField>
    <fullName>Plan_B__c</fullName>
    <label>Plan B</label>
    <type>TextArea</type>
</CustomField>