force-app/main/default/objects/Activity/fields/Posible_fecha_de_facturaci_n__c.field-meta.xml
<CustomField>
    <fullName>Posible_fecha_de_facturaci_n__c</fullName>
    <label>Posible fecha de facturación</label>
    <type>Date</type>
</CustomField>