force-app/main/default/objects/Activity/fields/Preguntas_Clave_a_Realizar__c.field-meta.xml
<CustomField>
    <fullName>Preguntas_Clave_a_Realizar__c</fullName>
    <label>Preguntas Clave a Realizar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>¿Qué?</fullName>
            </value>
            <value>
                <fullName>¿Cómo?</fullName>
            </value>
            <value>
                <fullName>¿Cuándo?</fullName>
            </value>
            <value>
                <fullName>¿Quién?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>