force-app/main/default/objects/Activity/fields/Puntos_clave_a_desarrollar__c.field-meta.xml
<CustomField>
    <fullName>Puntos_clave_a_desarrollar__c</fullName>
    <inlineHelpText>Acuerdos o puntos por resolver.
Ventajas de Imperquimia (Promoción del mes, descuentos, distribución, diferenciadores)
Venta Cruzada (Desarrollo del portafolio de del cliente)
Escucha activa del cliente (Ofrecer una solución)
Contra propuesta (Si es necesaria)</inlineHelpText>
    <label>Puntos clave a desarrollar</label>
    <type>TextArea</type>
</CustomField>